# ml_for_malaria

./: .gitignore  README.md  compile_requirements.sh  pyproject.toml
contrib/azole/: azole_predict.py  azole_train.py
ml_for_malaria/model/: azole.py  base.py
ml_for_malaria/train/: featurization.py  train_xgb_classifier.py
requirements/: requirements-dev.txt  requirements.txt
src/model/: azole.py
src/train/: featurization.py  train_xgb_classifier.py
